# vcpkg-cmake-example

./: .clang-format  CMakeLists.txt  Makefile  foo_library.cpp  main.cpp  vcpkg.json
